// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/new_channel_modal should match snapshot 1`] = `
<div>
  <button
    aria-controls="AddChannelCtaDropdown"
    aria-expanded="false"
    aria-haspopup="true"
    class="SidebarChannelNavigator__addChannelsCtaLhsButton SidebarChannelNavigator__addChannelsCtaLhsButton--untouched"
    id="addChannelsCta"
  >
    <i
      aria-hidden="true"
      class="icon-plus-box"
    />
    Add Channels
  </button>
</div>
`;

exports[`components/new_channel_modal should match snapshot when user has only join channel permissions 1`] = `
<div>
  <button
    class="SidebarChannelNavigator__addChannelsCtaLhsButton SidebarChannelNavigator__addChannelsCtaLhsButton--untouched"
    id="addChannelsCta"
  >
    <i
      aria-hidden="true"
      class="icon-plus-box"
    />
    Add Channels
  </button>
</div>
`;
